# punchcard

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  punchcard.md
.agents/plugins/: marketplace.json
.cursor/: mcp.json
.cursor/rules/: punchcard.mdc
.punchcard/: .gitignore  config.toml
crates/punchcard-cli/: Cargo.toml
crates/punchcard-cli/src/: agent_assets.rs  main.rs  memory_cmd.rs  retrieval_eval.rs
crates/punchcard-core/: Cargo.toml
crates/punchcard-core/src/: lib.rs
crates/punchcard-integrations/: Cargo.toml
crates/punchcard-integrations/src/: config_lint.rs  lib.rs  logging.rs
crates/punchcard-mcp/: Cargo.toml
crates/punchcard-mcp/src/: lib.rs
crates/punchcard-memory/: Cargo.toml
crates/punchcard-memory/src/: agent_format.rs  lib.rs
crates/punchcard-rag/: Cargo.toml
crates/punchcard-rag/src/: lib.rs
crates/punchcard-rules/: Cargo.toml
crates/punchcard-rules/assets/: activation.md  codex-agents.md  codex-mcp.json  codex-plugin.json  cursor-plugin.json  cursor-rule.mdc  interfaces.md  mcp-instructions.md  principles.md  punchcard-context.md  punchcard-doctor.md  punchcard-memory.md  punchcard-setup.md  punchcard-sync.md  punchcard.md  routing.md  workflow.md
crates/punchcard-rules/src/: lib.rs
crates/punchcard-security/: Cargo.toml
crates/punchcard-security/src/: lib.rs
crates/punchcard-store/: Cargo.toml
crates/punchcard-store/src/: lib.rs  session.rs
crates/punchcard-test-support/: Cargo.toml
crates/punchcard-test-support/src/: lib.rs
docs/: architecture.md  codegraph.md  codex.md  compatibility.md  configuration.md  cursor.md  environment-baseline.md  memory-model.md  plugins.md  rag.md  setup.md  validation.md
fixtures/rust-project/: Cargo.toml
fixtures/rust-project/docs/: ADR-001.md
fixtures/rust-project/src/: lib.rs
migrations/: 0001_initial.sql
plugins/codex/skills/punchcard-context/: SKILL.md
plugins/cursor/.cursor-plugin/: plugin.json
plugins/cursor/rules/: punchcard.mdc
plugins/cursor/skills/punchcard-context/: SKILL.md
plugins/cursor/skills/punchcard-memory/: SKILL.md
plugins/cursor/skills/punchcard-workflow/: SKILL.md
plugins/punchcard/.codex-plugin/: plugin.json
plugins/punchcard/skills/punchcard-context/: SKILL.md
plugins/punchcard/skills/punchcard-memory/: SKILL.md
plugins/punchcard/skills/punchcard-workflow/: SKILL.md
scripts/: agent-assets.sh  checksums.sh  install-local.sh  retrieval-eval.sh  routing-effectiveness.sh  setup.sh  validate.sh
