[workspace]
members = [
    "crates/punchcard-cli",
    "crates/punchcard-core",
    "crates/punchcard-integrations",
    "crates/punchcard-mcp",
    "crates/punchcard-memory",
    "crates/punchcard-rag",
    "crates/punchcard-rules",
    "crates/punchcard-security",
    "crates/punchcard-store",
    "crates/punchcard-test-support",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/dertin/punchcard"

[workspace.dependencies]
anyhow = "1.0.102"
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
futures = "0.3.31"
hex = "0.4.3"
ignore = "0.4.26"
lancedb = "0.30.0"
lance = { version = "7.0.0", default-features = false }
lance-datafusion = { version = "7.0.0", default-features = false }
rmcp = { version = "1.7.0", features = ["client", "server", "transport-io"] }
rusqlite = { version = "0.40.1", features = ["bundled-full", "chrono", "serde_json"] }
schemars = { version = "1.2.1", features = ["chrono04", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
missing_docs = "warn"
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 5 }
module_name_repetitions = { level = "allow", priority = 6 }
must_use_candidate = { level = "allow", priority = 6 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
