[package]
name = "punchcard-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
hex.workspace = true
punchcard-core = { path = "../punchcard-core" }
punchcard-rules = { path = "../punchcard-rules" }
punchcard-security = { path = "../punchcard-security" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
