[package]
name = "punchcard-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
punchcard-rules = { path = "../punchcard-rules" }
punchcard-core = { path = "../punchcard-core" }
punchcard-integrations = { path = "../punchcard-integrations" }
punchcard-memory = { path = "../punchcard-memory" }
punchcard-rag = { path = "../punchcard-rag" }
punchcard-store = { path = "../punchcard-store" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
