[package]
name = "punchcard-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
fastembed.workspace = true
futures.workspace = true
hex.workspace = true
ignore.workspace = true
lancedb.workspace = true
lance.workspace = true
lance-datafusion.workspace = true
punchcard-core = { path = "../punchcard-core" }
punchcard-security = { path = "../punchcard-security" }
punchcard-store = { path = "../punchcard-store" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
